move welcome email to create user transaction
